--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 REACT_APP_HOST=
-REACT_APP_TEST=ON
+REACT_APP_TEST=OFF
 REACT_APP_INFURA_PROD_ID=e35323bc24d243c6a971cefcaaa55953
 REACT_APP_INFURA_TEST_ID=32889197a22c47e7b40ed60e32f745d8
 
