--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.2.2",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.0.24",
+    "governor-common": "github:tinysquirrelton/governor-common",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -24,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "rm -rf src/governor-common && cp -r node_modules/governor-common/src src/governor-common"
   },
   "eslintConfig": {
     "extends": [
