--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-feather": "^2.0.8",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.3.1",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.3",
     "react-toastify": "^6.1.0",
     "react-typing-effect": "^2.0.4",
     "web3": "^1.3.0"
