--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "@walletconnect/web3-provider": "^1.4.0",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.0.24",
     "governor-common": "github:tinysquirrelton/governor-common",
@@ -19,7 +20,8 @@
     "react-scripts": "^4.0.3",
     "react-toastify": "^6.1.0",
     "react-typing-effect": "^2.0.4",
-    "web3": "^1.3.0"
+    "web3": "^1.3.0",
+    "web3modal": "^1.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
